file(GLOB LIBS RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}/*")

if(LIBS)
  list(SORT LIBS)
  foreach(lib ${LIBS})
    if(${lib} STREQUAL "CMakeLists.txt")
    else()
      option(BUILD_${lib} "build ${lib}" OFF)
      if(BUILD_${lib})
        message(STATUS option: BUILD_${lib}-->ON)
        add_subdirectory(${lib})
      else()
        message(STATUS option: BUILD_${lib}-->OFF)
      endif()
    endif()
  endforeach()
endif()